Fix InputNumber wrong height in horizontal mode

--- a/packages/core/src/components/input-number/input-number.scss
+++ b/packages/core/src/components/input-number/input-number.scss
@@ -68,6 +68,7 @@
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
       margin-right: 0;
+      display: flex;
     }
   }
 
@@ -81,6 +82,7 @@
     ::part(any-button) {
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
+      display: flex;
     }
   }
 
